--- a/app/src/main/res/layout/activity_form_add.xml
+++ b/app/src/main/res/layout/activity_form_add.xml
@@ -11,6 +11,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/photo"
             android:src="@drawable/ic_launcher"
             android:layout_gravity="center_horizontal"/>
 
